# PLCTandJiaChen

./: README.md
20240730成果/: README.md
20240731成果01/: README.md
20240731成果01/学习笔记__用OneNote打开/甲辰计划/: Cmake.one  OpenEuler.one  打开笔记本.onetoc2
20240830成果02/: qt-ros-dev.md  usb-cam-build.md  usb-cam.md  vm-install-oe.md
20240830成果02/QtrosAndOpenCV/: ros2AndOpenCVproject01.workspace
20240830成果02/QtrosAndOpenCV/hyzAndJoJo/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
20240830成果02/QtrosAndOpenCV/hyzAndJoJo/install/camera_pack/lib/camera_pack/: camera_ros2_opencv4
20240830成果02/QtrosAndOpenCV/hyzAndJoJo/install/camera_pack/share/camera_pack/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
20240830成果02/QtrosAndOpenCV/hyzAndJoJo/install/opencv_node/share/ament_index/resource_index/package_run_dependencies/: opencv_node
20240830成果02/QtrosAndOpenCV/hyzAndJoJo/install/opencv_node/share/ament_index/resource_index/parent_prefix_path/: opencv_node
20240830成果02/QtrosAndOpenCV/hyzAndJoJo/install/opencv_node/share/opencv_node/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
20240830成果02/QtrosAndOpenCV/hyzAndJoJo/install/rqt_display_node/lib/rqt_display_node/: camera_pack
20240830成果02/QtrosAndOpenCV/hyzAndJoJo/install/rqt_display_node/share/ament_index/resource_index/package_run_dependencies/: rqt_display_node
20240830成果02/QtrosAndOpenCV/hyzAndJoJo/install/rqt_display_node/share/rqt_display_node/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
20240830成果02/QtrosAndOpenCV/hyzAndJoJo/install/rqt_display_node/share/rqt_display_node/cmake/: rqt_display_nodeConfig.cmake
20240830成果02/QtrosAndOpenCV/hyzAndJoJo/install/usb_camera_node/lib/usb_camera_node/: camera_pack
20240830成果02/QtrosAndOpenCV/hyzAndJoJo/install/usb_camera_node/share/usb_camera_node/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
20240830成果02/QtrosAndOpenCV/hyzAndJoJo/install/usb_camera_node/share/usb_camera_node/cmake/: usb_camera_nodeConfig.cmake
20240830成果02/QtrosAndOpenCV/hyzAndJoJo/src/camera_pack/: CMakeLists.txt
20240830成果02/QtrosAndOpenCV/hyzAndJoJo/src/camera_pack/include/camera_pack/: camera_ros2_opencv4.h
20240830成果02/QtrosAndOpenCV/hyzAndJoJo/src/camera_pack/src/: camera_ros2_opencv4.cpp
20240830成果02/QtrosAndOpenCV/hyzAndJoJo/src/opencv_node/: CMakeLists.txt  package.xml
20240830成果02/QtrosAndOpenCV/hyzAndJoJo/src/opencv_node/src/: camera_pack.cpp  opencv_node.cpp
20240830成果02/QtrosAndOpenCV/hyzAndJoJo/src/rqt_display_node/: CMakeLists.txt
20240830成果02/QtrosAndOpenCV/hyzAndJoJo/src/rqt_display_node/abcde/: jjconfig.h
20240830成果02/QtrosAndOpenCV/hyzAndJoJo/src/rqt_display_node/include/: aaaa.h
20240830成果02/QtrosAndOpenCV/hyzAndJoJo/src/rqt_display_node/include/rqt_display_node/: camera_pack.h  rqt_display_node_cctv01.h
20240830成果02/QtrosAndOpenCV/hyzAndJoJo/src/rqt_display_node/src/: camera_pack.cpp  rqt_display_node.cpp
20240830成果02/QtrosAndOpenCV/hyzAndJoJo/src/rqt_display_node/src/include/: pptc.h
20240830成果02/QtrosAndOpenCV/hyzAndJoJo/src/usb_camera_node/: CMakeLists.txt
20240830成果02/QtrosAndOpenCV/hyzAndJoJo/src/usb_camera_node/launch/: launch_nodes.py  usb_cam_test01.launch
20240830成果02/QtrosAndOpenCV/hyzAndJoJo/src/usb_camera_node/src/: camera_pack.cpp  usb_camera_node.cpp
20240915成果03/: 多核处理器 实时操作系统架构.pptx
20241027成果04/: README.md  milk-v duo SDK编译烧写并测试tftp收发文件.md  milk-v duo SDK编译烧写并测试tftp收发文件实验.md  windows11 milk-v duo 开发环境搭建.md
20241027成果04/markdown/: issue.txt  windows11 milk-v duo 开发环境搭建和128G大容量卡烧写固件问题.md
20241128成果05/: README.md
20241226成果06/: README.md
20250123成果07/: README.md
20250226成果08/: README.md
20250326成果09/: README.md
学习笔记__用OneNote打开/甲辰计划/: 打开笔记本.onetoc2
